--- a/index.html
+++ b/index.html
@@ -1,58 +1,71 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-theme="dark">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login com Tema Escuro</title>
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.20/dist/full.css" rel="stylesheet" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://unpkg.com/phosphor-icons@1.4.2/src/css/phosphor.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sistema de Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
-<body class="min-h-screen bg-base-100 text-base-content flex items-center justify-center">
-
-  <!-- Toggle de Tema -->
-  <div class="absolute top-4 right-4">
-    <label class="swap swap-rotate">
-      <input type="checkbox" class="theme-controller" value="light" />
-      <!-- Ícone escuro -->
-      <i class="swap-on ph ph-sun text-2xl text-yellow-400"></i>
-      <!-- Ícone claro -->
-      <i class="swap-off ph ph-moon text-2xl text-gray-300"></i>
-    </label>
-  </div>
-
-  <!-- Card de login -->
-  <div class="w-full max-w-sm p-8 bg-base-200 shadow-2xl rounded-2xl">
-    <h2 class="text-2xl font-bold text-center mb-6">Login</h2>
-
-    <form method="POST" action="/login">
-      <div class="mb-4">
-        <label class="label">
-          <span class="label-text">Usuário</span>
-        </label>
-        <label class="input input-bordered flex items-center gap-2">
-          <i class="ph ph-user text-lg"></i>
-          <input type="text" name="usuario" class="grow" placeholder="Digite seu usuário" required />
-        </label>
+<body class="bg-gray-900 text-white min-h-screen flex items-center justify-center">
+  <div class="w-full max-w-md p-8 space-y-8 bg-gray-800 rounded-lg shadow-lg">
+    <div class="text-center">
+      <h1 class="text-3xl font-bold">Bem-vindo</h1>
+      <p class="mt-2 text-gray-400">Faça login para acessar sua conta</p>
+    </div>
+    
+    <form class="mt-8 space-y-6" action="#" method="POST">
+      <div class="rounded-md shadow-sm space-y-4">
+        <div>
+          <label for="email" class="block text-sm font-medium text-gray-400">Email</label>
+          <input id="email" name="email" type="email" required 
+                 class="appearance-none relative block w-full px-3 py-2 mt-1 border border-gray-700 
+                        rounded-md bg-gray-700 text-white placeholder-gray-500 
+                        focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-transparent">
+        </div>
+        <div>
+          <label for="password" class="block text-sm font-medium text-gray-400">Senha</label>
+          <input id="password" name="password" type="password" required 
+                 class="appearance-none relative block w-full px-3 py-2 mt-1 border border-gray-700 
+                        rounded-md bg-gray-700 text-white placeholder-gray-500 
+                        focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-transparent">
+        </div>
       </div>
 
-      <div class="mb-4">
-        <label class="label">
-          <span class="label-text">Senha</span>
-        </label>
-        <label class="input input-bordered flex items-center gap-2">
-          <i class="ph ph-lock text-lg"></i>
-          <input type="password" name="senha" class="grow" placeholder="Digite sua senha" required />
-        </label>
+      <div class="flex items-center justify-between">
+        <div class="flex items-center">
+          <input id="remember-me" name="remember-me" type="checkbox" 
+                 class="h-4 w-4 text-purple-600 focus:ring-purple-500 border-gray-700 rounded bg-gray-700">
+          <label for="remember-me" class="ml-2 block text-sm text-gray-400">
+            Lembrar-me
+          </label>
+        </div>
+        <div class="text-sm">
+          <a href="#" class="font-medium text-purple-400 hover:text-purple-300">
+            Esqueceu sua senha?
+          </a>
+        </div>
       </div>
 
-      <button type="submit" class="btn btn-primary w-full mt-4">Entrar</button>
+      <div>
+        <button type="submit" 
+                class="group relative w-full flex justify-center py-2 px-4 border border-transparent 
+                       text-sm font-medium rounded-md text-white bg-purple-600 hover:bg-purple-700 
+                       focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
+          Entrar
+        </button>
+      </div>
     </form>
-
-    <div class="text-center mt-6">
-      <a href="#" class="text-sm text-blue-400 hover:underline">Esqueceu a senha?</a>
+    
+    <div class="mt-6 text-center">
+      <p class="text-sm text-gray-400">
+        Não tem uma conta? 
+        <a href="#" class="font-medium text-purple-400 hover:text-purple-300">
+          Registre-se
+        </a>
+      </p>
     </div>
   </div>
-
 </body>
 </html>
