--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <form class="mt-8 space-y-6" action="#" method="POST">
       <div class="rounded-md shadow-sm space-y-4">
         <div>
-          <label for="email" class="block text-sm font-medium text-gray-400">Email</label>
+          <label for="email" aria-placeholder="Digite seu email..." class="block text-sm font-medium text-gray-400">Email</label>
           <input id="email" name="email" type="email" required 
                  class="appearance-none relative block w-full px-3 py-2 mt-1 border border-gray-700 
                         rounded-md bg-gray-700 text-white placeholder-gray-500 
                         focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-transparent">
         </div>
         <div>
-          <label for="password" class="block text-sm font-medium text-gray-400">Senha</label>
+          <label for="password" aria-placeholder="Digite sua senha..." class="block text-sm font-medium text-gray-400">Senha</label>
           <input id="password" name="password" type="password" required 
                  class="appearance-none relative block w-full px-3 py-2 mt-1 border border-gray-700 
                         rounded-md bg-gray-700 text-white placeholder-gray-500 
@@ -35,7 +35,7 @@
 
       <div class="flex items-center justify-between">
         <div class="flex items-center">
-          <input id="remember-me" name="remember-me" type="checkbox" 
+          <input id="remember-me" name="remember-me" type="checkbox"
                  class="h-4 w-4 text-purple-600 focus:ring-purple-500 border-gray-700 rounded bg-gray-700">
           <label for="remember-me" class="ml-2 block text-sm text-gray-400">
             Lembrar-me
